# fraud-detection-pipeline

./: .gitignore  Makefile  README.md  dvc.yml  pyproject.toml
.github/workflows/: ci.yaml
data/: processed.dvc  raw.dvc
sql/: build_warehouse.sql
src/etl/: loader.py  runner.py  schemas.py
tests/: conftest.py  test_etl.py  test_utils.py
