[project]
name = "fraud-detection-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.1",
    "dvc>=3.67.0",
    "evidently>=0.7.21",
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "imbalanced-learn>=0.14.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "mlflow>=1.27.0",
    "numpy>=2.3.5",
    "optuna>=4.8.0",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.8",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shap>=0.51.0",
    "streamlit>=1.19.0",
    "uvicorn>=0.42.0",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: tests that require the full dataset",
]
addopts = "-m 'not integration'"
pythonpath = ["."]